syntax = "proto3";

package monolith;

import "domain.proto";

service Variables {
    rpc GetVariables (GetVariablesRequest) returns (GetVariablesResponse) {}
    rpc SetVariable (SetVariableRequest) returns (SetVariableResponse) {}
}

message GetVariablesRequest {
    repeated string keys = 1;
}

message GetVariablesResponse {

    repeated Variable values = 1;
}

message SetVariableRequest {
    string key = 1;
    string formula = 2;
}

message SetVariableResponse {
    Error error = 1;
    Variable variable = 2;
}