syntax = "proto3";

package resolver;

service Resolver {
    rpc Resolve (ResolveRequest) returns (ResolveResponse) {}
}

message ResolveRequest {
    string formula = 1;
}

message ResolveResponse {
    Object result = 1;
    string error = 2;
}

enum ObjectType {
    BOOLEAN = 0;
    LAMBDA = 1;
    LIST = 2;
    NUMBER = 3;
    STRING = 4;
    RECORD = 5;
}

message Object {
    ObjectType type = 1;
    bool bool_value = 2;
    string string_value = 3;
    double number_value = 4;
    List list_value = 5;
    Record record_value = 6;
    Tuple tuple_value = 7;
    Lambda lambda_value = 8;
}

message List {
    repeated Object elements = 1;
}

message Tuple {
    repeated Object elements = 2;
}

message Lambda {
    repeated string free_variables = 1;
}

message Record {
    repeated RecordProperty properties = 1;
}

message RecordProperty {
    string name = 1;
    Object value = 2;
}